# emsi_data_platform

./: .env.canary.example  .env.example  .env.required-analytics.example  .gitignore  README.md  dagster_workspace.yaml  docker-compose.superset-postgres-metadata.yml  docker-compose.yml  pyproject.toml  versions.env
dagster_home/: dagster.yaml
dagster_project/: definitions.py  quality_persistence.py  quality_persistence_test.py  soda_quality_gate.py  soda_quality_gate_test.py
dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/macros/: README.md
docker/dagster/: Dockerfile
docker/dbt/: Dockerfile
docker/evidence/: Dockerfile
docker/ingest/: Dockerfile
docker/soda/: Dockerfile
evidence/: package.json
ingest_worker/: __init__.py  clickhouse_candidate_smoke.py  clickhouse_candidate_smoke_test.py  common.py  ios_limited_canary_capture.py  ios_limited_canary_capture_test.py  privacy_lifecycle_runtime.py  privacy_lifecycle_runtime_test.py  privacy_lifecycle_smoke.py  required_analytics_capture.py  required_analytics_capture_test.py  smoke_check.py  smoke_producer.py  worker.py  worker_test.py
scripts/: launch_dagster_job.sh  open_required_analytics_ssh_tunnel.sh  run_clickhouse_candidate_smoke.sh  run_ingest_smoke.sh  run_ios_limited_canary_capture.sh  run_phase_d_smoke.sh  run_privacy_lifecycle_runtime.sh  run_privacy_lifecycle_smoke.sh  run_product_reporting_source_bound_local_evidence.sh  run_required_analytics_capture.sh  superset_metadata_backup_restore_smoke.sh  verify_static.sh
soda/: configuration.yml
(+108 files in other folders)
